--- a/build.gradle
+++ b/build.gradle
@@ -1,30 +1,53 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
+apply plugin: 'com.android.application'
 
-buildscript {
-    repositories {
-        google()
-        mavenCentral()
+android {
+    compileSdk 34
+
+    defaultConfig {
+        applicationId "com.example.mnist_digits_recognition"
+        minSdk 26
+        targetSdk 34
+        versionCode 7
+        versionName '1.5.1'
+
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
-    dependencies {
-        classpath 'com.android.tools.build:gradle:8.1.0'
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+    buildTypes {
+        release {
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+        }
     }
+    ndkVersion '25.0.8775105'
+    namespace 'com.example.mnist_digits_recognition'
 }
 
-plugins {
-    id "org.sonarqube" version "3.3"
+repositories {
+    mavenCentral()
 }
 
-allprojects {
-    repositories {
-        google()
-        mavenCentral()
-    }
-}
+dependencies {
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-tasks.register('clean', Delete) {
-    delete rootProject.buildDir
+    implementation 'androidx.appcompat:appcompat:1.7.0-alpha03'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'com.google.android.material:material:1.11.0-alpha01'
+    testImplementation 'junit:junit:4.13.2'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+
+    // PyTorch
+    implementation 'org.pytorch:pytorch_android_lite:1.13.1'
+    implementation 'org.pytorch:pytorch_android_torchvision_lite:1.13.1'
+
+    // ViewModel
+    def lifecycle_version = '2.6.1'
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
+
+    // Fragment
+    def fragment_version = '1.6.1'
+    implementation "androidx.fragment:fragment:$fragment_version"
 }
